fix: hero service too high

--- a/src/components/hero-service-choice/hero-service-choice.module.scss
+++ b/src/components/hero-service-choice/hero-service-choice.module.scss
@@ -1,5 +1,6 @@
 @import '../../styles/variables';
 
 .hero_service_choice {
-  //
+  min-height: unset;
+  padding-bottom: $spacingXS;
 }
